Fix alignment add favicon

--- a/rock-paper-scissors/styles.css
+++ b/rock-paper-scissors/styles.css
@@ -28,6 +28,17 @@ header {
 
 /*--------------------------------------------*/
 
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 4px solid white;
+  padding: 2em;
+  background-color: #1e1c1c;
+  min-height: 1060px;
+}
+
 .gamesScore {
   width: 100%;
   height: fit-content;
@@ -73,11 +84,13 @@ header {
   font-size: 2.5em;
 }
 
-#computerGameTallyTitle, #playerGameTallyTitle {
+#computerGameTallyTitle,
+#playerGameTallyTitle {
   font-size: 1em;
 }
 
-#computerGTScore, #playerGTScore {
+#computerGTScore,
+#playerGTScore {
   font-size: 3em;
 }
 
@@ -99,7 +112,6 @@ header {
   font-size: 2em;
   color: white;
   font-weight: 600;
-  /* border: 1px solid white; */
 }
 
 /*--------------------------------------------*/
@@ -107,9 +119,9 @@ header {
 .game {
   width: 100%;
   height: auto;
-  padding: 5em;
-  /* background-color: black; */
+  padding: 1em;
   text-align: center;
+  display: block;
 }
 
 .resultGraphic {
@@ -121,19 +133,20 @@ header {
   align-items: center;
   width: fit-content;
 }
+
 .spinEmoji {
   animation-name: spin;
   animation-duration: 5000ms;
-  animation-iteration-count: 1;
+  animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
 @keyframes spin {
-    from {
-        transform:rotate(0deg);
-    }
-    to {
-        transform:rotate(360deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 #plResultGraph,
@@ -147,11 +160,11 @@ header {
 .messages {
   display: flex;
   flex-direction: column;
-  justify-content: center; 
-  height: auto;
-  width: fit-content;
+  justify-content: center;
+  height: 300px;
+  width: 100%;
   margin: 0.5em auto;
-  font-size: 3em;
+  font-size: 2em;
   color: white;
   text-align: center;
   vertical-align: middle;
@@ -186,10 +199,6 @@ header {
   border-bottom: 8px solid #992317;
   background-color: #d14536;
   transform: translateY(3px);
-}
-
-.buttonsContainer {
-  display: block;
 }
 
 .buttons {
